<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mental.rpgo.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/content_main_TextView_Tlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Tlog"
        android:textSize="40sp"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usr"
        android:hint="@string/username_email"
        android:layout_below="@+id/Tlog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:textColorHint="@android:color/white"
        android:textStyle="normal|italic"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwd"
        android:hint="@string/password"
        android:layout_below="@+id/usr"
        android:layout_alignStart="@+id/usr"
        android:text=""
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/TV_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TV_pwdforgot"
        android:textSize="14sp"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:textColor="@android:color/white"
        android:layout_below="@+id/pwd"
        android:layout_alignStart="@+id/pwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogIn"
        android:background="#009A9A"
        android:textColor="@android:color/white"
        android:layout_below="@+id/TV_pwdforgot"
        android:layout_alignStart="@+id/TV_pwdforgot"
        android:layout_marginTop="19dp"
        android:layout_alignEnd="@+id/pwd" />

    <TextView
        android:text="@string/not_registered_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/TV_notregistered"
        android:textColor="@android:color/white"
        android:layout_below="@+id/btnLogIn"
        android:layout_alignStart="@+id/btnLogIn"
        android:textSize="16sp" />

    <TextView
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TV_signup"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:layout_alignBaseline="@+id/TV_notregistered"
        android:layout_alignBottom="@+id/TV_notregistered"
        android:layout_alignEnd="@+id/TV_pwdforgot"
        android:textSize="16sp" />

</RelativeLayout>
