<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mental.rpgo.Forgot_password"
    android:background="#2C3E54">

    <TextView
        android:text="@string/forgot_password_TV_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:id="@+id/TV_username"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/forgot_password_TV_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/TV_email"
        android:textSize="22sp"
        android:layout_below="@+id/TV_username"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/ET_username"
        android:layout_alignEnd="@+id/TV_username"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/ET_email"
        android:hint="@string/e_mail"
        android:layout_alignBaseline="@+id/TV_email"
        android:layout_alignBottom="@+id/TV_email"
        android:layout_alignStart="@+id/ET_username"
        android:layout_alignEnd="@+id/ET_username"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="normal|italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ET_username"
        android:hint="@string/username"
        android:layout_alignBaseline="@+id/TV_username"
        android:layout_alignBottom="@+id/TV_username"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="76dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="normal|italic" />

    <Button
        android:text="@string/forgot_password_btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/btnSend"
        android:layout_below="@+id/ET_email"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:background="#009A9A"
        android:padding="15dp"/>
</RelativeLayout>
