<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8af7ff">

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:id="@+id/btnAnswer5"
        android:textAlignment="center"
        android:layout_below="@+id/answer5"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_purple"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thetext5"
        android:textSize="32sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:layout_marginTop="108dp"
        android:textStyle="normal|bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/riddle5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/answer5"
        android:textAlignment="center"
        android:hint="@string/answer_here"
        android:textStyle="normal|italic"
        android:layout_marginTop="87dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:layout_below="@+id/thetext5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
