<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_grifos2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#8af7ff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mental.rpgo.grifos2"
    tools:showIn="@layout/activity_riddle2">

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/btnAnswer2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/answer2"
        android:textAlignment="center"
        android:hint="@string/answer_here"
        android:layout_above="@+id/btnAnswer2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp" />

    <TextView
        android:text="@string/grifos2_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thetext2"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/holo_purple"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColorLink="@android:color/holo_green_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
