<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_riddle3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mental.rpgo.grifos3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_riddle3"
    android:background="#8af7ff">

    <TextView
        android:text="@string/content_riddle3_TextView_theText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/theText3"
        tools:text="A locked door"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textColorLink="@android:color/holo_green_light"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/answer3"
        android:hint="@string/answer_here"
        android:textAlignment="center"
        android:layout_below="@+id/theText3"
        android:layout_alignStart="@+id/theText3"
        android:layout_marginTop="234dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textStyle="normal|italic" />

    <Button
        android:text="@string/content_riddle3_btnAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAnswer3"
        android:layout_below="@+id/answer3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textSize="18sp"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white" />

</RelativeLayout>